--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <script src="introducao/script.js"></script>
-    <script src="exercicios/pj1.js"></script>
-    <script src="exercicios/pj2.js"></script>
-    <script src="exercicios/pj3.js"></script>
-    <script src="exercicios/pj4.js"></script>
-    <script src="exercicios/pj5.js"></script>
-    <script src="exercicios/pj6.js"></script>
-    <script src="exercicios/pj7.js"></script>
-    <script src="exercicios/pj8.js"></script>
-    <script src="exercicios/pj9.js"></script>
-    <script src="exercicios/pj10.js"></script>
-    <script src="exercicios/pj11.js"></script>
-    <script src="exercicios/pj12.js"></script>
+     <script src="introducao/script.js"></script> 
+    <!-- <script src="exercicios/pj1.js"></script> -->
+    <!-- <script src="exercicios/pj2.js"></script> -->
+    <!-- <script src="exercicios/pj3.js"></script> -->
+    <!-- <script src="exercicios/pj4.js"></script> -->
+    <!-- <script src="exercicios/pj5.js"></script> -->
+    <!-- <script src="exercicios/pj6.js"></script> -->
+    <!-- <script src="exercicios/pj7.js"></script> -->
+    <!-- <script src="exercicios/pj8.js"></script>  -->
+     <!-- <script src="exercicios/pj9.js"></script>  -->
+    <!-- <script src="exercicios/pj10.js"></script>  -->
+    <!-- <script src="exercicios/pj11.js"></script> -->
+    <!-- <script src="exercicios/pj12.js"></script> -->
 
     <title>JS</title>
   </head>
