--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-     <!-- <script src="introducao/script.js"></script>  -->
+     <script src="introducao/script.js"></script>
     <!-- <script src="exercicios/ex1.js"></script> -->
     <!-- <script src="exercicios/ex2.js"></script> -->
     <!-- <script src="exercicios/ex3.js"></script> -->
@@ -16,10 +16,10 @@
     <!-- <script src="exercicios/ex8.js"></script>  -->
      <!-- <script src="exercicios/ex9.js"></script>  -->
     <!-- <script src="exercicios/ex10.js"></script>  -->
-    <!-- <script src="exercicios/ex11.js"></script>  -->
+     <!-- <script src="exercicios/ex11.js"></script>   -->
      <!-- <script src="exercicios/ex12.js"></script>  -->
      <!-- <script src="exercicios/ex13.js"></script>  -->
-     <!-- <script src="exercicios/ex14.js"></script>  -->
+      <!-- <script src="exercicios/ex14.js"></script>   -->
     <title>JS</title>
   </head>
   <body>
